not perfect but at least this fixes scrolling and sticky header, leaves gaps on sides though which is not optimal

--- a/src/less/App.less
+++ b/src/less/App.less
@@ -5,8 +5,9 @@
     justify-content: center;
     text-align:center; 
     font-family: 'Oxygen', sans-serif;
-    overflow:hidden;
-    width:100%;
+    // overflow-x:hidden;
+    width:98%;
+    margin:0 auto;
 }
 
 header{
@@ -18,6 +19,10 @@ header{
     width:100%;
     background-color: whitesmoke;
     border-bottom:2px solid black;
+}
+
+header .nav {
+    
 }
 
 header h1 {
